--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Aldrich&family=Black+Ops+One&family=Days+One&family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Aldrich&family=Black+Ops+One&family=Days+One&family=Lato:wght@300&family=Roboto:wght@300&display=swap');
 
 /*DECLARE VARIABLES */
 :root{
     --primary-color:#047aed;
+    --seconday-color:#1c3fa8;
+    --dark-color:#002240;
+    --light-color:#f4f4f4;
 }
 
 /* DECLARE THE UNIVERSAL SELECTOR */
@@ -153,4 +156,39 @@ img{
 .stats .grid p{
     font-size: 20px;
     font-weight: bold;
+}
+
+
+/* ********************************************************************************** */
+/*                                    CLI
+/* ********************************************************************************** */
+
+.cli .grid{
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr) ;
+
+
+}
+
+.cli .grid >*:first-child{
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
+}
+
+.cli .grid >*:nth-child(2){
+    grid-column: 3;
+    grid-row: 1;
+}
+
+.cli .card{
+    text-align: center;
+}
+
+
+/* ********************************************************************************** */
+/*                                    CLOUD
+/* ********************************************************************************** */
+
+.cloud .grid{
+    grid-template-columns: 4fr, 3fr;
 }
