--- a/CSS/utilities.css
+++ b/CSS/utilities.css
@@ -3,17 +3,18 @@
 /* ********************************************************************************** */
 
 
-.container{
+.container {
     max-width: 1100px;
     margin: 0 auto;
-    overflow: auto; /*to get ride of the space above beacuse of H1 line-height */
+    overflow: auto;
+    /*to get ride of the space above beacuse of H1 line-height */
     padding: 0 40px;
 }
 
-.card{
+.card {
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
     padding: 20px;
     margin: 10px;
     color: #333;
@@ -29,29 +30,79 @@
     border-radius: 5px;
 }
 
-.btn-outline{
+.btn-outline {
     background-color: transparent;
     border: 1px solid #fff
 }
 
-.btn:hover{
+.btn:hover {
     transform: scale(0.98);
 }
 
-.text-center{
+
+/*BACKGROUND AND COLORED BUTTON */
+.bg-primary,
+.btn-primary {
+    background-color: var(--primary-color);
+    color: #fff;
+}
+
+.bg-secondary,
+.btn-secondary {
+    background-color: var(--secondary-color);
+    color: #fff;
+}
+
+.bg-dark,
+.btn-dark {
+    background-color: var(--dark-color);
+    color: #fff;
+}
+
+.bg-light,
+.btn-light {
+    background-color: var(--light-color);
+    color: #333;
+}
+
+/*TEXT AND SIZES */
+.lead{
+    font-size: 20px;
+}
+
+.sm{
+    font-size: 1rem;
+}
+
+.md{
+    font-size: 2rem;
+}
+
+.lg{
+    font-size: 3rem;
+}
+
+.xl{
+    font-size: 4rem;
+}
+
+.text-center {
     text-align: center;
 }
 
- .flex{  /*we defined <div class="container flex">, but we dont want to add flex to class container */
+.flex {
+    /*we defined <div class="container flex">, but we dont want to add flex to class container */
     display: flex;
     /* justify-content: space-between; this line was moved to .nvar .flex*/
-    justify-content: center; /*it has no action cause Specificity is 0,1,0 while .navbar .flex is 0,2,0*/
+    justify-content: center;
+    /*it has no action cause Specificity is 0,1,0 while .navbar .flex is 0,2,0*/
     align-items: center;
-    height: 100%; /*to make sure it gets whatever size the container is*/
+    height: 100%;
+    /*to make sure it gets whatever size the container is*/
 }
 
 
-.grid{
+.grid {
     display: grid;
     /* grid-template-columns: 300px 200px; Not recommended
     grid-template-columns: 2fr 1fr; this is the preferred option, but the next line has same effect*/
@@ -62,74 +113,90 @@
     height: 100%;
 }
 
-.grid-3{
+.grid-3 {
     grid-template-columns: repeat(3, 1fr);
 }
 
- /* ***** MARGIN ***** */
- .my-1{
-     margin: 1rem 0;
- }
- .my-2{
-     margin: 1.5rem 0;
- }
- .my-3{
-     margin: 2rem 0;
- }
- .my-4{
-     margin: 2.5rem 0;
- }
- .my-5{
-     margin: 3rem 0;
- }
+/* ***** MARGIN ***** */
+.my-1 {
+    margin: 1rem 0;
+}
+
+.my-2 {
+    margin: 1.5rem 0;
+}
+
+.my-3 {
+    margin: 2rem 0;
+}
+
+.my-4 {
+    margin: 2.5rem 0;
+}
+
+.my-5 {
+    margin: 3rem 0;
+}
 
 
- .m-1{
+.m-1 {
     margin: 1rem;
 }
-.m-2{
+
+.m-2 {
     margin: 1.5rem;
 }
-.m-3{
+
+.m-3 {
     margin: 2rem;
 }
-.m-4{
+
+.m-4 {
     margin: 2.5rem;
 }
-.m-5{
+
+.m-5 {
     margin: 3rem;
 }
 
 
- /* ***** PADDING ***** */
-.py-1{
+/* ***** PADDING ***** */
+.py-1 {
     padding: 1rem 0;
 }
-.py-2{
+
+.py-2 {
     padding: 1.5rem 0;
 }
-.py-3{
+
+.py-3 {
     padding: 2rem 0;
 }
-.py-4{
+
+.py-4 {
     padding: 2.5rem 0;
 }
-.py-5{
+
+.py-5 {
     padding: 3rem 0;
 }
 
-.p-1{
+.p-1 {
     padding: 1rem;
 }
-.p-2{
+
+.p-2 {
     padding: 1.5rem;
 }
-.p-3{
+
+.p-3 {
     padding: 2rem;
 }
-.p-4{
+
+.p-4 {
     padding: 2.5rem;
 }
-.p-5{
+
+.p-5 {
     padding: 3rem;
 }
